Fix view overflow

--- a/pages/index/style.css
+++ b/pages/index/style.css
@@ -158,11 +158,11 @@ html, body {
   flex: 1;
   border: 3px solid var(--color-border);
   border-radius: 4px;
-  height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+  min-height: 100vh;
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 40px 20px;
   justify-content: center;
 }
 
